# haskell-problem-sets

./: README.md  folder-template.hsfiles
Arithmetic/: Arithmetic.cabal  Problems.hs  README.md  Tests.hs
Functions/: Functions.cabal  Problems.hs  README.md
Functors/: Functors.cabal  README.md
Lists/: Lists.cabal  Problems.hs  README.md  Tests.hs
Logic/: .gitignore  Logic.cabal  Problems.hs  README.md  Tests.hs
TypeClasses/: Problems.hs  README.md  TypeClasses.cabal
